# svg-creator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/creator/: svg.rs
