[package]
name = "svg-creator"
version = "0.1.0"
edition = "2021"
description = "A library to create svg"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/svg-creator"
categories = ["development-tools","development-tools::testing"]
keywords = ["svg", "creator","design","graphics"]
authors = ["Willy Micieli"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
